# rag_agent_project

./: .gitignore  LICENSE  app.py  index.html  pyproject.toml
agent/: react_agent.py
agent/tool/: agent_tools.py  middleware.py
config/: chroma.yml
model/: factory.py
prompts/: report_prompt.txt
rag/: rag_service.py  vector_store.py
util/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompts_loader.py
