[project]
name = "ai-rag-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
